--- a/src/main/resources/templates/prepare-bill.html
+++ b/src/main/resources/templates/prepare-bill.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
-<h1 class="dish-header">Dania</h1>
+<h1 class="bill-header">Dania</h1>
 <tr th:each="dish, custStat : ${allDishes}">
     <td>
-        <button class="add-dish-btn btn-light" th:text="${dish.name + ': ' + dish.price + 'zł'}"></button>
+        <button class="add-dish-btn btn-light" th:text="${dish.name + ': ' + dish.price + 'zł'}"
+                th:action="@{api/v1/bill/addDish/{dish.id}/ToBill/{newBill.id}}"></button>
     </td>
 </tr>
-<h1 class="dish-header">Dania</h1>
+<h1 class="bill-header">Rachunek</h1>
+<tr th:each="dish, custStat : ${newBill.dishes}">
+    <td>
+        <h6 th:text="dish.name"></h6>
+    </td>
+</tr>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
