--- a/src/main/resources/templates/forms/dish-form.html
+++ b/src/main/resources/templates/forms/dish-form.html
@@ -16,7 +16,8 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-dish-name">Nazwa</span>
                     </div>
-                    <input type="text" th:field="*{name}" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+                    <input type="text" th:field="*{name}">
+                    <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
