Add cancel button.

--- a/src/main/resources/templates/forms/dish-form.html
+++ b/src/main/resources/templates/forms/dish-form.html
@@ -35,6 +35,7 @@
                     <textarea class="form-control" th:field="*{description}" aria-label="With textarea"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary mb-2">Dodaj</button>
+                <a href="/api/v1/dish/allDishes" class="btn btn-secondary mb-2">Anuluj</a>
     <!--            <td>Nazwa:</td>-->
     <!--            <td><input type="text" th:field="*{name}" /></td>-->
     <!--            <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>-->
