Change buttons attrib..

--- a/src/main/resources/templates/dish-list.html
+++ b/src/main/resources/templates/dish-list.html
@@ -11,7 +11,7 @@
         <span class="navbar-text">
             <h1 class="dish-header">Lista dań</h1>
         </span>
-        <a href="/api/v1/dish/addDish" class="btn btn-lg btn-dark">Nowe danie</a>
+        <a href="/api/v1/dish/addDish" class="btn btn-lg btn-outline-secondary">Nowe danie</a>
     </nav>
 
     <table class="table table-striped">
