--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a href="/api/v1/dish/allDishes" class="btn btn-lg btn-outline-secondary">Dania</a>
+    <a href="/api/v1/bill/bills" class="btn btn-lg btn-outline-secondary">Rachunki</a>
 </nav>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
