Add back buttons.

--- a/src/main/resources/templates/dish-list.html
+++ b/src/main/resources/templates/dish-list.html
@@ -12,6 +12,7 @@
             <h1 class="dish-header">Lista dań</h1>
         </span>
         <a href="/api/v1/dish/addDish" class="btn btn-lg btn-outline-secondary">Nowe danie</a>
+        <a href="/api/v1/home" class="btn btn-lg btn-outline-secondary">Powrót</a>
     </nav>
 
     <table class="table table-striped">
