--- a/src/main/resources/templates/bills.html
+++ b/src/main/resources/templates/bills.html
@@ -8,7 +8,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a href="/api/v1/bill/newBill" class="btn btn-lg btn-outline-secondary">Nowy rachunek</a>
-
+    <a href="/api/v1/home" class="btn btn-lg btn-outline-secondary">Powrót</a>
 </nav>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
