--- a/src/main/resources/templates/bills.html
+++ b/src/main/resources/templates/bills.html
@@ -10,7 +10,10 @@
     <a href="/api/v1/bill/newBill" class="btn btn-lg btn-outline-secondary">Nowy rachunek</a>
     <a href="/api/v1/home" class="btn btn-lg btn-outline-secondary">Powrót</a>
 </nav>
-
+<h1 class="bills-header">Rachunki</h1>
+<tr th:each="bill : ${bills}">
+    <a th:text="'Rachunek ' + ${bill.id}"></a>
+</tr>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
